Use query params instead of JSON in body for API
